<resources>
    <string name="app_name">SmartEar Snapchat Fixed</string>
    <string name="action_settings">Settings</string>
    <string name="bluetoothDevices">Bluetooth devices</string>
    <string name="progress_message">Please, wait…</string>
    <string name="musicControl">Earpiece volume</string>
    <string name="mute">Mute</string>
    <string name="unMute">UnMute</string>
    <string name="pairedDevices">Paired Devices</string>
    <string name="thereIsNoDevicesYet">No paired devices available</string>
    <string name="addDevice">Add device</string>
    <string name="paired">Paired</string>
    <string name="unPaired">unPaired</string>
    <string name="ringControl">Ringtone volume</string>
    <string name="notificationControl">Notification Control</string>
    <string name="systemControl">System control</string>
    <string name="microphone">Microphone</string>
    <string name="souncControl">Sound Control</string>
    <string name="microphoneControl">Microphone control</string>
    <string name="voiceRecognizer">Voice Recognizer</string>
    <string name="startRecording">Start recording</string>
    <string name="stopRecording">Stop recording</string>
    <string name="startTitle">SmartEar %1$s</string>
    <string name="contactCanNotBeFound">No contacts found for %1$s</string>
    <string name="noPhoneNumbersError">%1$s has no phone numbers</string>
    <string name="noActivityError">Can not launch %1$s</string>
    <string name="installDragonMobile">Please, install Dragon Mobile Assistant</string>
    <string name="equalizer">Equalizer</string>
    <string name="hz">%1$s Hz</string>
    <string name="db">%1$s dB</string>
    <string name="bassBoost">Bass boost</string>
    <string name="balance">Balance</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="player">Player</string>
    <string name="streaming">Streaming</string>
    <string name="bionicHearing">Bionic Hearing</string>
    <string name="local">Local</string>
    <string name="presets">Presets</string>
    <string name="prescription">Prescription</string>
    <string name="settings">Settings</string>
    <string name="assistant">Assistant</string>
    <string name="chat">Chat</string>
    <string name="music">Music</string>
    <string name="pairing">Pairing</string>
    <string name="tutorial">Help</string>
    <string name="raePlayer">RAE Player</string>
    <string name="runPlaylist">Run Playlist</string>
    <string name="streamingSpotifySetting">Streaming : Spotify</string>
    <string name="raePlayerSetting">RaePlayer : Run Playlist</string>
    <string name="players">Players</string>
    <string name="newMessage">New Message</string>
    <string name="play">Play</string>
    <string name="goodMorning">Good Morning</string>
    <string name="youAre">You are</string>
    <string name="authenticated">authenticated</string>
    <string name="sanfrancisco">San Francisco</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="today">Today - %1$s</string>
    <string name="message">Message</string>
    <string name="recording">Recording</string>
    <string name="sent">Sent</string>
    <string name="newVoiceChat">New Voice Chat</string>
    <string name="playing">Playing</string>

    <string-array name="bandLevels">
        <item>Bass</item>
        <item>Low</item>
        <item>Mid</item>
        <item>Upper</item>
        <item>High</item>
    </string-array>
</resources>
