<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/goodMorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_action_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#fff"
        android:textSize="36sp"
        android:text="@string/youAre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/greenText"
        android:textSize="36sp"
        android:text="@string/authenticated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>