<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.smartear.smartear.viewmodels.StartFragmentModel" />
    </data>

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairedDevices" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="4dp"
            android:background="#ccc" />

        <TextView
            android:id="@+id/pairedDevices"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@{viewModel.devicesText}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ccc" />

        <Button
            android:id="@+id/pairDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/addDevice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/soundControl" />

        <SeekBar
            android:id="@+id/soundSeekBar"
            android:max="@{viewModel.maxVolumeLevel}"
            android:progress="@{viewModel.volumeLevel}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/mute" />

    </LinearLayout>
</layout>